--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic>=2.12.4",
     "uvicorn>=0.38.0",
     "openai>=1.0.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [dependency-groups]
