--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "uvicorn>=0.38.0",
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
+    "langchain>=0.1.0",
+    "langchain-openai>=0.0.5",
 ]
 
 [dependency-groups]
