--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
     "react-webcam": "^7.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
